examples/parsimonious/lisp.peg


program    = cell+
cell       = space* (list / atom) space*
list       = "(" cell+ ")"
atom       = boolean / integer / string / symbol
boolean    = "#t" / "#f"
integer    = ~"[1-9]" ~"[0-9]"*
string     = "\"" (("\\" ~".") / ~"[^\"]")* "\""
symbol     = (!delimiter ~".")+
space      = ~"[\\s]"
paren      = "(" / ")"
delimiter  = paren / space
